# CodeTrainTrafficSignaling

./: CMakeLists.txt  README.md  main.cpp
Domain/: CMakeLists.txt  CommonHeader.h  DomainEntryPoint.cpp  DomainEntryPoint.h  JSONLoader.cpp  JSONLoader.h  SimulationDispatcher.cpp  SimulationDispatcher.h  Station.cpp  Station.h  Train.cpp  Train.h
GUI/: Page1Form.ui.qml  main.qml  qml.qrc
GUI/common/: ButtonCreator.qml  CreateTrack.qml  CreateTrain.qml  Header.qml  MapCreatorWithLocation.qml
GUI/screen/: CreateTrainTrack.qml  Home.qml  Simulation.qml
GUI/shortestPath/: shortestPath.js
GUIBackend/: CMakeLists.txt  GUIBackend.cpp  GUIBackend.h
